fix gap

--- a/assets/styles/style2.css
+++ b/assets/styles/style2.css
@@ -1831,9 +1831,10 @@ div.footer__wwf div.container ul li {
 	
 	
 	.container-fluid .callforentryRow {
-
-		border-bottom-width: 10px;
-	
+    border-bottom-width: 10px;
+  }
+    
+  
 }
 	
 
@@ -1873,9 +1874,33 @@ padding:0 ! important;
   text-transform: none;
 }
 
-.center-hero {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.hero-image {
+  background: url("../../assets/images/hero-top.jpg");
 }
+
+.hero-top {    
+  position: relative;    
+  width: 100%;    
+  z-index: 1;  
+
+  }  
+
+  .hero-overlay img {width: 100% }
+
+  .hero-overlay {    
+      position: absolute;    
+      z-index: 1000;    
+      top: 30%;
+      width: 100%;
+      height: 100%;
+      text-align: center; 
+      font-weight: 700;    
+      color: white;
+      /**some fallback value**/    
+      font-size: 16px;  
+      /**responsive size is roughly 3.4%  of the device's viewport width**/    
+      font-size: 3.4vw;  
+      text-shadow: black 2px 2px;
+      }
+
+      
